PrototypeOne/ROS2/ros2_ws/log/build_2025-07-29_21-59-23/sensor_hub/stdout_stderr.log
running egg_info
writing ../../build/sensor_hub/sensor_hub.egg-info/PKG-INFO
writing dependency_links to ../../build/sensor_hub/sensor_hub.egg-info/dependency_links.txt
writing entry points to ../../build/sensor_hub/sensor_hub.egg-info/entry_points.txt
writing requirements to ../../build/sensor_hub/sensor_hub.egg-info/requires.txt
writing top-level names to ../../build/sensor_hub/sensor_hub.egg-info/top_level.txt
reading manifest file '../../build/sensor_hub/sensor_hub.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/sensor_hub/sensor_hub.egg-info/SOURCES.txt'
running build
running build_py
copying sensor_hub/sensor_hub.py -> /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/build/sensor_hub/build/lib/sensor_hub
running install
running install_lib
copying /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/build/sensor_hub/build/lib/sensor_hub/sensor_hub.py -> /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/python3.12/site-packages/sensor_hub
byte-compiling /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/python3.12/site-packages/sensor_hub/sensor_hub.py to sensor_hub.cpython-312.pyc
running install_data
running install_egg_info
  File "/home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/python3.12/site-packages/sensor_hub/sensor_hub.py", line 31
    self.get_logger().info('Odometry Position:
                           ^
SyntaxError: unterminated string literal (detected at line 31)

removing '/home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/python3.12/site-packages/sensor_hub-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/sensor_hub/sensor_hub.egg-info to /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/python3.12/site-packages/sensor_hub-0.0.0-py3.12.egg-info
running install_scripts
Installing sensor_hub script to /home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/install/sensor_hub/lib/sensor_hub
writing list of installed files to '/home/agata/Desktop/Things/GIT/BlueSpark/BlueSpark/PrototypeOne/ROS2/ros2_ws/build/sensor_hub/install.log'
